<resources>
    <string name="app_name">socialX</string>
    <string name="social">Social</string>
    <string name="login">login</string>
    <string name="signup">sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="regsiter_now">Regsiter Now</string>
    <string name="john_doe">John Doe</string>
    <string name="starts">*********</string>
    <string name="sign_in">Sign In!</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="search_in_feed">Search in feed</string>
</resources>