<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_200"
    tools:context=".fragment.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            android:layout_marginVertical="10dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create an\nAccount"
                android:textSize="35sp"
                android:textColor="@color/red"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_et"
                android:paddingStart="10dp"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:hint="@string/john_doe"
                app:drawableTint="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_et"
                android:paddingStart="10dp"
                android:drawableEnd="@drawable/ic_baseline_mail_24"
                android:hint="@string/johndoe_gmail_com"
                app:drawableTint="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact no"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/india"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="IN  +91"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="20dp"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_et"
                    android:paddingStart="10dp"
                    android:drawableEnd="@drawable/ic_baseline_phone_24"
                    android:hint="9876543210"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:drawableTint="@color/red"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_et"
                android:paddingStart="10dp"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:hint="@string/starts"
                android:inputType="textPassword"
                android:drawableTint="@color/red"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:buttonTint="@color/red"
                android:text="I agree with terms and conditions"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="16sp"
                    android:textColor="@color/grey_400"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="16sp"
                    android:textColor="@color/red"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/signup_btn"
        android:background="@drawable/bottom_bar_shape"
        android:text="@string/signup"
        android:textColor="@color/grey_200"
        app:backgroundTint="@color/red"/>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:elevation="11dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>