<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:textColor="@color/white"
                android:textSize="35sp" />


        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_bar_shape"
        android:id="@+id/tab"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:outlineProvider="none"
            android:elevation="0dp"
            android:background="@drawable/top_bar_shape"
            app:backgroundTint="@color/color_selector"
            android:textColor="@color/grey_200"
            android:textSize="16sp"
            android:text="@string/login"
            android:id="@+id/login_btn"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:elevation="0dp"
            android:layout_weight="1"
            android:outlineProvider="none"
            android:layout_margin="1dp"
            android:textColor="@color/grey_400"
            android:background="@drawable/top_bar_shape"
            app:backgroundTint="@color/color_selector"
            android:text="@string/signup"
            android:id="@+id/signup_btn"/>

    </LinearLayout>


    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fragment_container_view"
        app:layout_constraintTop_toBottomOf="@id/tab"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>